src/snapshots/worktrunk__shell__tests__config_line_bash.snap
---
source: src/shell.rs
expression: "Shell::Bash.config_line(\"wt\")"
---
if command -v wt >/dev/null 2>&1; then eval "$(command wt config shell init bash)"; fi
