src/snapshots/worktrunk__shell__tests__config_line_powershell.snap
---
source: src/shell.rs
expression: "Shell::PowerShell.config_line(\"wt\")"
---
if (Get-Command wt -ErrorAction SilentlyContinue) { Invoke-Expression (& wt config shell init powershell) }
