src/snapshots/worktrunk__shell__tests__config_line_powershell_custom.snap
---
source: src/shell.rs
expression: "Shell::PowerShell.config_line(\"git-wt\")"
---
if (Get-Command git-wt -ErrorAction SilentlyContinue) { Invoke-Expression (& git-wt config shell init powershell) }
