src/snapshots/worktrunk__shell__tests__init_bash.snap
---
source: src/shell.rs
expression: output
---
# worktrunk shell integration for bash

# Only initialize if wt is available (in PATH or via WORKTRUNK_BIN)
if command -v wt >/dev/null 2>&1 || [[ -n "${WORKTRUNK_BIN:-}" ]]; then

    # Override wt command with file-based directive passing.
    # Creates a temp file, passes path via WORKTRUNK_DIRECTIVE_FILE, sources it after.
    # WORKTRUNK_BIN can override the binary path (for testing dev builds).
    wt() {
        local use_source=false
        local args=()

        for arg in "$@"; do
            if [[ "$arg" == "--source" ]]; then use_source=true; else args+=("$arg"); fi
        done

        # Completion mode: call binary directly, no directive file needed.
        # This check MUST be here (not in the binary) because clap's completion
        # handler runs before argument parsing.
        if [[ -n "${COMPLETE:-}" ]]; then
            command "${WORKTRUNK_BIN:-wt}" "${args[@]}"
            return
        fi

        local directive_file exit_code=0
        directive_file="$(mktemp)"

        # Note: On Windows (Git Bash/MSYS2), mktemp returns POSIX paths like /tmp/xxx.
        # MSYS2 automatically converts these to Windows paths (C:\Users\...\Temp\xxx)
        # when passing environment variables to native Windows binaries.
        # See: https://www.msys2.org/docs/filesystem-paths/
        # No explicit cygpath conversion is needed here.

        # --source: use cargo run (builds from source)
        if [[ "$use_source" == true ]]; then
            WORKTRUNK_DIRECTIVE_FILE="$directive_file" cargo run --bin wt --quiet -- "${args[@]}" || exit_code=$?
        else
            WORKTRUNK_DIRECTIVE_FILE="$directive_file" command "${WORKTRUNK_BIN:-wt}" "${args[@]}" || exit_code=$?
        fi

        if [[ -s "$directive_file" ]]; then
            source "$directive_file"
            if [[ $exit_code -eq 0 ]]; then
                exit_code=$?
            fi
        fi

        rm -f "$directive_file"
        return "$exit_code"
    }

    # Lazy completions - generate on first TAB, then delegate to clap's completer
    _wt_lazy_complete() {
        # Generate completions function once (check if clap's function exists)
        if ! declare -F _clap_complete_wt >/dev/null; then
            # Use `command` to bypass the shell function and call the binary directly.
            # Without this, `wt` would call the shell function which evals
            # the completion script internally but doesn't re-emit it.
            eval "$(COMPLETE=bash command "${WORKTRUNK_BIN:-wt}" 2>/dev/null)" || return
        fi
        _clap_complete_wt "$@"
    }

    complete -o nospace -o bashdefault -F _wt_lazy_complete wt
fi
