src/snapshots/worktrunk__shell__tests__init_bash_exe_suffix.snap
---
source: src/shell.rs
expression: output
---
# worktrunk shell integration for bash

# Only initialize if git-wt.exe is available (in PATH or via WORKTRUNK_BIN)
if command -v git-wt.exe >/dev/null 2>&1 || [[ -n "${WORKTRUNK_BIN:-}" ]]; then

    # Override git-wt.exe command with file-based directive passing.
    # Creates a temp file, passes path via WORKTRUNK_DIRECTIVE_FILE, sources it after.
    # WORKTRUNK_BIN can override the binary path (for testing dev builds).
    git-wt.exe() {
        local use_source=false
        local args=()

        for arg in "$@"; do
            if [[ "$arg" == "--source" ]]; then use_source=true; else args+=("$arg"); fi
        done

        # Completion mode: call binary directly, no directive file needed.
        # This check MUST be here (not in the binary) because clap's completion
        # handler runs before argument parsing.
        if [[ -n "${COMPLETE:-}" ]]; then
            command "${WORKTRUNK_BIN:-git-wt.exe}" "${args[@]}"
            return
        fi

        local directive_file exit_code=0
        directive_file="$(mktemp)"

        # --source: use cargo run (builds from source)
        # Always use 'wt' binary - git-wt is identical code, just different argv[0]
        if [[ "$use_source" == true ]]; then
            WORKTRUNK_DIRECTIVE_FILE="$directive_file" cargo run --bin wt --quiet -- "${args[@]}" || exit_code=$?
        else
            WORKTRUNK_DIRECTIVE_FILE="$directive_file" command "${WORKTRUNK_BIN:-git-wt.exe}" "${args[@]}" || exit_code=$?
        fi

        if [[ -s "$directive_file" ]]; then
            source "$directive_file"
            if [[ $exit_code -eq 0 ]]; then
                exit_code=$?
            fi
        fi

        rm -f "$directive_file"
        return "$exit_code"
    }

    # Lazy completions - generate on first TAB, then delegate to clap's completer
    _git-wt.exe_lazy_complete() {
        # Generate completions function once (check if clap's function exists)
        if ! declare -F _clap_complete_git-wt.exe >/dev/null; then
            # Use `command` to bypass the shell function and call the binary directly.
            # Without this, `git-wt.exe` would call the shell function which evals
            # the completion script internally but doesn't re-emit it.
            eval "$(COMPLETE=bash command "${WORKTRUNK_BIN:-git-wt.exe}" 2>/dev/null)" || return
        fi
        _clap_complete_git-wt.exe "$@"
    }

    complete -o nospace -o bashdefault -F _git-wt.exe_lazy_complete git-wt.exe
fi
